# numlock-monitor

./: CMakeLists.txt  LICENSE  README.md  main.c  resource.h  resource.rc
.github/workflows/: cmake-single-platform.yml
